--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -505,21 +505,22 @@
       </div>
 
       <button class="talent-btn">Find Talents</button>
-
-      <div class="talent-imgs row align-items-center mt-5">
-        <!-- <img src="assets/shape-1.svg" class="w-10"/> -->
-        <div class="col-6">  
-          <img src="/assets/img_7.jpg" class="w-100 h-auto" loading="lazy"/>
+      <div>
+        <img src="/assets/shape-1.svg" width="55" height="55" class="mt-4 ms-5" />
+  
+        <div class="talent-imgs row align-items-center">
+          <div class="col-6">
+            <img src="/assets/img_7.jpg" class="w-100 h-auto" loading="lazy"/>
+          </div>
+          <div class="col-6">
+            <img src="/assets/img_8.jpg" class="w-100 h-auto mb-4" loading="lazy"/>
+            <img src="/assets/img_9.jpg" class="w-100 h-auto" loading="lazy"/>
+          </div>
         </div>
-        <div class="col-6">
-          <img src="/assets/img_8.jpg" class="w-100 h-auto mb-4" loading="lazy"/>
-          <img src="/assets/img_9.jpg" class="w-100 h-auto" loading="lazy"/>
-        </div>
-        <!-- <img src="assets/shape-2.svg" class="w-10"/> -->
       </div>
 
     </div>
-    
+
 
 
   <div class="QandA-wrapper">
@@ -629,7 +630,7 @@
     <h1>Most complete job portal.</h1>
     <p>Signup and start find your job and talents.</p>
 
-    <div class="userSetup-btns d-flex flex-column flex-lg-row gap-3">
+    <div class="userSetup-btns d-flex flex-row flex-lg-row gap-4 justify-content-center">
       <button class="btn1">Looking for job?</button>
       <button class="btn2">Post a job</button>
     </div>
@@ -637,50 +638,57 @@
   </div>
 </section>
 
-<section class="footer">
-  <div>
-    <h1>JobNet</h1>
-    <a href="">jobnetsupport&#64;new.com</a>
+<section class="footer-wrapper">
+  <div class="footer d-flex flex-column flex-lg-row gap-5">
+    <div class="footer-header">
+      <h1>JobNet</h1>
+      <a href="">jobnetsupport&#64;new.com</a>
+      <div class="mt-5">
+        <img src="/assets/shape-2.svg" alt="" width="55" height="55" />
+      </div>
+    </div>
+
+    <div class="footer-category-container d-flex flex-column flex-lg-row gap-5">
+      <div class="footer-category">
+        <h1>Services</h1>
+        <div class="footer-category-links">
+          <p><a href="">Browse Jobs</a></p>
+          <p><a href="">Companies</a></p>
+          <p><a href="">Candidates</a></p>
+          <p><a href="">Pricing</a></p>
+        </div>
+      </div>
+
+      <div class="footer-category">
+        <h1>Company</h1>
+        <div class="footer-category-links">
+          <p><a href="">About Us</a></p>
+          <p><a href="">Blogs</a></p>
+          <p><a href="">FAQ's</a></p>
+          <p><a href="">Contact</a></p>
+        </div>
+      </div>
+
+      <div class="footer-category">
+        <h1>Support</h1>
+        <div class="footer-category-links">
+          <p><a href="">Terms of use</a></p>
+          <p><a href="">Terms and Conditions</a></p>
+          <p><a href="">Privacy</a></p>
+          <p><a href="">Cookie Policy</a></p>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div>
-    <div>
-      <h1>Services</h1>
-      <div>
-        <p>Browse Jobs</p>
-        <p>Companies</p>
-        <p>Candidates</p>
-        <p>Pricing</p>
-      </div>
-    </div>
 
-    <div>
-      <h1>Company</h1>
-      <div>
-        <p>About Us</p>
-        <p>Blogs</p>
-        <p>FAQ's</p>
-        <p>Contact</p>
-      </div>
-    </div>
-
-    <div>
-      <h1>Support</h1>
-      <div>
-        <p>Terms of use</p>
-        <p>Terms and Conditions</p>
-        <p>Privacy</p>
-        <p>Cookie Policy</p>
-      </div>
-    </div>
-  </div>
 
   <div>
     <div>
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
+      <!-- <i class="bi bi-whatsapp"></i>
+      <i class="bi bi-google"></i>
+      <i class="bi bi-instagram"></i> -->
+      <img src="/assets/web_select.png"/>
     </div>
 
     <div>
