--- a/src/app/components/job-card/job-card.component.html
+++ b/src/app/components/job-card/job-card.component.html
@@ -4,7 +4,7 @@
   <div class="d-flex gap-3 align-items-start">
     <img [src]="job.logo" alt="Company logo" class="job-logo" />
 
-    <div style="width: 100%;">
+    <div class="d-flex flex-column align-items-start gap-3 w-100">
       <div>
         <h2 class="job-title">{{ job.title }}</h2>
         <p
@@ -14,26 +14,26 @@
           {{ job.type }}
         </p>
         <p class="job-meta">
-          <span style="color: #646765; font-weight: 400;">{{ job.date }} by</span> {{ job.company }}
+          <span style="color: #646765; font-weight: 400"
+            >{{ job.date }} by</span
+          >
+          {{ job.company }}
         </p>
         <p class="job-location">{{ job.location }}</p>
         <p class="job-tags">{{ job.tags }}</p>
       </div>
-      <div class="d-flex flex-row align-items-start gap-2">
+      <div class="d-flex align-items-center justify-content-center gap-3">
         <div class="savejob-icon-wrapper" title="Save Job">
-          <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-        >
-          <path
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="m19 21l-7-4l-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
-          />
-        </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m19 21l-7-4l-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
+            />
+          </svg>
         </div>
         <button class="apply-btn">Apply</button>
       </div>
