--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,80 +1,75 @@
 <section class="hero-section">
   <nav class="navbar navbar-expand-lg bg-transparent sticky-top w-100">
-    <div class="container-fluid p-2">
-      <a class="navbar-brand fw-bold text-success ms-4" href="#">JobNet</a>
-
-      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
-
-      <!-- Custom Hamburger Icon -->
+    <div class="container-fluid">
       <div
-        class="hamburger me-2"
-        (click)="toggleMenu()"
-        [ngClass]="{ open: isMenuOpen }"
+        class="d-flex justify-content-between align-items-center w-100 pt-2 ps-2"
       >
-        <span class="text-white"></span>
-        <span class="text-white"></span>
-        <span class="text-white"></span>
+        <div>
+          <a class="navbar-brand" routerLink="/">JobNet</a>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center gap-3">
+          <a
+            routerLink="/login"
+            class="smlogin-link d-xs-block d-sm-block d-lg-none"
+            >Login</a
+          >
+          <!-- Custom Hamburger Icon -->
+          <div
+            class="hamburger me-1"
+            (click)="toggleMenu()"
+            [ngClass]="{ open: isMenuOpen }"
+          >
+            <span class="text-white"></span>
+            <span class="text-white"></span>
+            <span class="text-white"></span>
+          </div>
+        </div>
       </div>
 
-      <div class="navmenu" [ngClass]="{ show: isMenuOpen }" id="navbarNav">
-        <div>
+      <div
+        class="navmenu px-3 pt-4"
+        [ngClass]="{ show: isMenuOpen }"
+        id="navbarNav"
+      >
+        <div class="header text-start">
           <h2>JobNet</h2>
         </div>
-        <ul class="navbar-nav mx-auto fs-5">
-          <li class="nav-item me-4">
-            <a
-              class="nav-link text-black fw-medium"
-              routerLink="/"
-              routerLinkActive="active"
+        <ul class="navbar-nav text-start">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/" routerLinkActive="active"
               >Home</a
             >
           </li>
-          <li class="nav-item me-4">
-            <a
-              class="nav-link text-black fw-medium"
-              routerLink="/jobs"
-              routerLinkActive="active"
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/jobs" routerLinkActive="active"
               >Jobs</a
             >
           </li>
-          <li class="nav-item me-4">
-            <a
-              class="nav-link text-black fw-medium"
-              routerLink="/explore"
-              routerLinkActive="active"
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/explore" routerLinkActive="active"
               >Explore</a
             >
           </li>
-          <li class="nav-item me-4">
-            <a
-              class="nav-link text-black fw-medium"
-              routerLink="/blog"
-              routerLinkActive="active"
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/blog" routerLinkActive="active"
               >Blog</a
             >
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link text-black fw-medium"
-              routerLink="/contact"
-              routerLinkActive="active"
+            <a class="nav-link" routerLink="/contact" routerLinkActive="active"
               >Contact</a
             >
           </li>
         </ul>
-        <ul class="navbar-nav me-3">
-          <li class="nav-item d-none-sm-6">
-            <a class="btn me-2 fw-semibold fs-5" routerLink="/login">Login</a>
+        <ul class="navbar-nav text-center">
+          <li class="nav-item d-none d-lg-block d-xl-block d-xxl-block">
+            <a class="btn loginbtn me-2 fw-semibold fs-5" routerLink="/login"
+              >Login</a
+            >
           </li>
           <li class="nav-item">
-            <a
-              class="btn btn-success rounded-pill fw-semibold fs-5 px-4 py-2"
-              routerLink="/signup"
-              >Register</a
-            >
+            <a class="btn signupbtn" routerLink="/signup">Register</a>
           </li>
         </ul>
       </div>
@@ -400,9 +395,10 @@
       <!-- CONTROLS -->
       <div class="carousel-controls">
         <div
-        class="prev-icon"
-        data-bs-target="#carouselExample"
-        data-bs-slide="prev">
+          class="prev-icon"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
           <svg
             class="text-black"
             xmlns="http://www.w3.org/2000/svg"
@@ -422,9 +418,9 @@
         </div>
 
         <div
-        class="next-icon"
-        data-bs-target="#carouselExample"
-        data-bs-slide="next"
+          class="next-icon"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
         >
           <svg
             class="text-black"
@@ -452,76 +448,77 @@
 
     <h1 class="header">Find top talents from JobNet.</h1>
 
-      <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#panelsStayOpen-collapseOne"
-              aria-expanded="true"
-              aria-controls="panelsStayOpen-collapseOne"
-            >
-              Seamless Search
-            </button>
-          </h2>
-          <div
-            id="panelsStayOpen-collapseOne"
-            class="accordion-collapse collapse show"
-            data-bs-parent="#accordionPanelsStayOpenExample"
+    <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne"
+            aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne"
           >
-            <div class="accordion-body">
-              It only takes 5 minutes. Set-up is smooth and simple, with fully
-              customizable page design to reflect your brand. It only takes 5
-              minutes.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo"
-              aria-expanded="false"
-              aria-controls="flush-collapseTwo"
-            >
-              Hire Top Talents
-            </button>
-          </h2>
-          <div
-            id="flush-collapseTwo"
-            class="accordion-collapse collapse"
-            data-bs-parent="#accordionFlushExample"
-          >
-            <div class="accordion-body">
-              Practice what you learned on realistic lorem quis test questions
-              testing.
-            </div>
+            Seamless Search
+          </button>
+        </h2>
+        <div
+          id="panelsStayOpen-collapseOne"
+          class="accordion-collapse collapse show"
+          data-bs-parent="#accordionPanelsStayOpenExample"
+        >
+          <div class="accordion-body">
+            It only takes 5 minutes. Set-up is smooth and simple, with fully
+            customizable page design to reflect your brand. It only takes 5
+            minutes.
           </div>
         </div>
       </div>
-
-      <button class="talent-btn">Find Talents</button>
-      <div>
-        <img src="/assets/shape-1.svg" width="55" height="55" class="mt-4 ms-5" />
-
-        <div class="talent-imgs row align-items-center">
-          <div class="col-6">
-            <img src="/assets/img_7.jpg" class="w-100 h-auto" loading="lazy"/>
-          </div>
-          <div class="col-6">
-            <img src="/assets/img_8.jpg" class="w-100 h-auto mb-4" loading="lazy"/>
-            <img src="/assets/img_9.jpg" class="w-100 h-auto" loading="lazy"/>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo"
+            aria-expanded="false"
+            aria-controls="flush-collapseTwo"
+          >
+            Hire Top Talents
+          </button>
+        </h2>
+        <div
+          id="flush-collapseTwo"
+          class="accordion-collapse collapse"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            Practice what you learned on realistic lorem quis test questions
+            testing.
           </div>
         </div>
       </div>
-
     </div>
 
+    <button class="talent-btn">Find Talents</button>
+    <div>
+      <img src="/assets/shape-1.svg" width="55" height="55" class="mt-4 ms-5" />
 
+      <div class="talent-imgs row align-items-center">
+        <div class="col-6">
+          <img src="/assets/img_7.jpg" class="w-100 h-auto" loading="lazy" />
+        </div>
+        <div class="col-6">
+          <img
+            src="/assets/img_8.jpg"
+            class="w-100 h-auto mb-4"
+            loading="lazy"
+          />
+          <img src="/assets/img_9.jpg" class="w-100 h-auto" loading="lazy" />
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="QandA-wrapper">
     <h1 class="header">Questions & Answers</h1>
@@ -546,7 +543,9 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           </div>
         </div>
       </div>
@@ -560,7 +559,7 @@
             aria-expanded="false"
             aria-controls="collapseTwo"
           >
-          How do you find different criteria in your process?
+            How do you find different criteria in your process?
           </button>
         </h2>
         <div
@@ -569,7 +568,9 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           </div>
         </div>
       </div>
@@ -592,7 +593,9 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           </div>
         </div>
       </div>
@@ -616,7 +619,9 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           </div>
         </div>
       </div>
@@ -640,7 +645,9 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           </div>
         </div>
       </div>
@@ -657,7 +664,9 @@
     <h1>Most complete job portal.</h1>
     <p>Signup and start find your job and talents.</p>
 
-    <div class="userSetup-btns d-flex flex-row flex-lg-row gap-4 justify-content-center">
+    <div
+      class="userSetup-btns d-flex flex-row flex-lg-row gap-4 justify-content-center"
+    >
       <button class="btn1">Looking for job?</button>
       <button class="btn2">Post a job</button>
     </div>
@@ -708,9 +717,9 @@
     </div>
   </div>
 
-
-
-  <div class="footer-end d-flex align-items-center justify-content-center text-center">
+  <div
+    class="footer-end d-flex align-items-center justify-content-center text-center"
+  >
     <div>
       <div class="socials-wrapper d-flex flex-row gap-2 justify-content-center">
         <i class="fa-brands fa-whatsapp"></i>
@@ -718,12 +727,12 @@
         <i class="fa-brands fa-google"></i>
         <i class="fa-brands fa-instagram"></i>
       </div>
-  
+
       <div class="other-links-wrapper d-flex flex-row gap-3 mt-4">
         <p>Privacy & Terms.</p>
         <p>Contact Us</p>
       </div>
-  
+
       <div class="copyright mt-1">
         <p>Copyright &#64;2025 JobNet inc.</p>
       </div>
@@ -731,7 +740,6 @@
   </div>
 </section>
 
-
-<div class="top-btn" *ngIf="showScrollTop" (click)="scrollToTop()"> 
+<div class="top-btn" *ngIf="showScrollTop" (click)="scrollToTop()">
   <i class="fa-solid fa-arrow-up"></i>
 </div>
