--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,763 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap");
-
-.hero-section {
-  background: url("/assets/hero.jpg") no-repeat center center/cover;
-  max-width: 100%;
-  min-height: 100vh; /* Let it grow if needed */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 8.5rem 1rem 6rem; /* Breathing room on small screens */
-  box-sizing: border-box;
-}
-
-.hero-text {
-  color: #000;
-  max-width: 700px;
-  width: 100%;
-}
-
-.hero-text h1 {
-  font-family: "EB Garamond", serif;
-  font-size: 2.8rem;
-  font-weight: 500;
-  letter-spacing: -1px;
-  line-height: 47.61px;
-  padding: 0 1rem 0 1rem;
-}
-
-.hero-text p {
-  margin: 1.5rem 0 1.8rem;
-  font-family: "Gordita-Regular", cursive;
-  color: #000000b3;
-  font-size: 1.1rem;
-  line-height: 29px;
-  text-align: center;
-}
-
-.heroSearch {
-  background-color: #fff;
-  padding: 0.6rem 0;
-  margin: 1rem;
-  border-radius: 10px;
-  text-align: center;
-}
-
-.searchBtn {
-  padding: 0.7rem 1.8rem;
-  background-color: #00be57;
-  color: #fff;
-  border: 1px solid transparent;
-  border-radius: 6px;
-  font-size: 1rem;
-  text-transform: uppercase;
-  appearance: button;
-  cursor: pointer;
-  font-family: "Gordita-Regular", cursive;
-  font-weight: 700;
-  text-align: center;
-  transition: 0.3s ease-in-out;
-  margin: -5px auto 0;
-  letter-spacing: 1px;
-}
-.searchBtn:hover {
-  background-color: #244034;
-}
-
-.form-label {
-  color: #a2a2a2;
-  font-size: 14px;
-  font-family: "Gordita-Regular", cursive;
-  margin: 0 0 8px 4px;
-  text-align: left;
-  display: block;
-  padding-left: 18px;
-}
-
-.customSelectWrapper {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-}
-
-.formSelect {
-  appearance: none; /* removes default arrow */
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border: none;
-  outline: none;
-  padding-right: 40px; /* leave space for custom arrow */
-  color: #585656;
-  font-size: 1rem;
-  font-family: "Gordita-Regular", cursive;
-  text-align: left;
-  display: block;
-  width: 98%;
-  /* height: 30px; */
-  padding-left: 18px;
-  cursor: pointer;
-  user-select: none;
-  background-color: #fff;
-}
-
-.customArrow {
-  content: "";
-  position: absolute;
-  top: 60%;
-  right: 15px;
-  width: 8px;
-  height: 8px;
-  border-right: 2px solid #7c7c7c;
-  border-bottom: 2px solid #7c7c7c;
-  transform: translateY(-50%) rotate(45deg);
-  transition: transform 0.2s ease-in-out;
-  pointer-events: none;
-}
-
-.customSelectWrapper.open .customArrow {
-  transform: translateY(-50%) rotate(-135deg);
-}
-
-.formSelect option {
-  background-color: #fff;
-  color: #00be57;
-  font-size: 1rem;
-  padding: 10px;
-  cursor: pointer;
-}
-
-/* Scrollbar */
-.formSelect::-webkit-scrollbar {
-  width: 10px;
-}
-.formSelect::-webkit-scrollbar-thumb {
-  background-color: #00be57;
-  border-radius: 10px;
-}
-.formSelect::-webkit-scrollbar-track {
-  background-color: #f0f0f0;
-}
-
-#searchBox {
-  border: none;
-  outline: none;
-  width: 100%;
-  display: block;
-  padding: 0 0 0 21px;
-  font-size: 1rem;
-}
-
-#searchBox::placeholder {
-  font-size: 17px;
-  color: #7c7c7c;
-}
-
-.uploadCV {
-  color: #000;
-  border: 1px solid transparent;
-  border-radius: 8px;
-  /* padding: .5rem 1rem; */
-  text-transform: capitalize;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar {
-  transition: background-color 0.3s ease-in-out;
-  position: fixed;
-}
-
-.scrolled {
-  background-color: #fff !important;
-  animation-name: scroll;
-  animation-duration: 1s;
-}
-
-@keyframes scroll {
-  from {
-    transform: translateY(-100%);
-  }
-  to {
-    transform: translateY(0);
-  }
-}
-
 .body {
   padding: 4rem 0.8rem 2rem;
 }
-
-.category-header {
-  color: #212529;
-  font-family: "EB Garamond", serif;
-  font-size: 35px;
-  font-weight: 600;
-}
-
-.category-card {
-  position: relative;
-  background-color: #fff;
-  border-radius: 40px;
-  border: 0.666667px solid #cbcbcb;
-  cursor: pointer;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 3.5rem 0;
-  max-width: 200px;
-  margin: auto;
-}
-
-.category-card:hover {
-  border: 0.666667px solid #00bf58;
-}
-
-.category-card .icon {
-  position: absolute;
-  top: -15px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #fff;
-  padding: 0.5rem;
-  border-radius: 50%;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
-}
-
-.category-card .icon svg {
-  display: block;
-  width: 25px;
-  height: 25px;
-  color: #333;
-}
-
-.category-card .title {
-  color: #254035;
-  cursor: pointer;
-  font-family: "Gordita-Regular", cursive;
-  font-size: 18px;
-  font-weight: 500;
-  margin: 1rem 0 2rem;
-  text-align: center;
-}
-
-.category-card .total-job {
-  color: #09321c99;
-  cursor: pointer;
-  font-family: "Gordita-Regular", cursive;
-  font-size: 14px;
-  text-align: center;
-}
-
-.explore-all .btn {
-  font-family: "Gordita-Regular", cursive;
-  font-size: 1rem;
-  font-weight: 700;
-  line-height: 25px;
-  text-decoration: underline;
-  color: #00be57;
-  text-underline-offset: 6px;
-  text-decoration-thickness: 2px;
-}
-
-.banner-container {
-  margin: 6rem 0;
-}
-
-.fancy-banner {
-  color: #fff;
-  font-family: "Gordita-Regular", cursive;
-}
-
-.fancy-banner .fancy-banner-text {
-  background-color: #765246;
-  padding: 3rem 1.2rem;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-}
-
-.fancy-banner .fancy-banner-text h2 {
-  font-size: 2.5rem;
-  margin: 0 0 2rem;
-  font-family: "EB Garamond", serif;
-  color: #ffffff;
-  font-weight: 550;
-}
-
-.fancy-banner .fancy-banner-text p {
-  font-weight: 400;
-  margin-bottom: 2rem;
-  color: #ffffff;
-  font-size: 1.1rem;
-  line-height: 1.8;
-  letter-spacing: 0.2px;
-  max-width: 100%;
-}
-
-.fancy-banner .fancy-banner-text button {
-  padding: 0.5rem 0;
-  background: transparent;
-  border: 1px solid #fff;
-  border-radius: 20px;
-  font-size: 15px;
-  font-weight: 700;
-  color: #fff;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.fancy-banner-img {
-  width: 100%;
-}
-
-.fancy-banner-img img {
-  max-width: 100%;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-}
-
-.achievements-wrapper {
-  padding: 5rem 1.2rem;
-}
-
-.achievements-wrapper .achievement {
-  font-family: "Gordita-Regular", cursive;
-}
-
-.achievements-wrapper .achievement h1 {
-  font-size: 1.9rem;
-  font-weight: 600;
-}
-
-.achievements-wrapper .achievement p {
-  font-size: 1rem;
-  font-weight: 400;
-  margin: 0.5rem 0 0;
-  color: #333;
-}
-
-.hr-line {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.new-jobs .header {
-  font-size: 2.2rem;
-  font-family: "EB Garamond", serif;
-  font-weight: 500;
-  margin: 0 0 3rem;
-}
-
-.view-jobs-wrapper {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.view-jobs-wrapper app-job-card:last-child .job-card {
-  border-bottom: none;
-}
-
-.job-posting {
-  background-color: #f1f6f3;
-  border: 0.666667px solid #d6ece0;
-  border-radius: 30px;
-  display: inline-block;
-  font-family: "Gordita-Regular", cursive;
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 14px;
-  padding: 8px 25px;
-  text-align: center;
-  max-width: 100%;
-}
-
-.job-posting div {
-  font-size: 1rem;
-  font-weight: 600;
-  display: inline-block;
-  margin-bottom: 10px;
-  line-height: 24px;
-}
-
-.job-posting div span {
-  font-size: 1rem;
-  font-weight: 600;
-  color: #00be57;
-}
-
-.job-posting a {
-  border: none;
-  outline: none;
-  text-decoration: underline;
-  font-size: 1rem;
-  font-weight: 400;
-  background: transparent;
-  color: #00be57;
-}
-
-.testimonials {
-  margin: 5rem 0 6rem;
-  max-width: 700px;
-}
-
-.carousel {
-  margin: 0 1rem;
-  color: #fff;
-}
-
-.carousel-inner {
-  border-radius: 30px;
-  background-color: #755146;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  padding: 30px 15px 30px;
-  transition: 0.25s ease-in-out;
-  cursor: pointer;
-}
-
-.carousel-inner:hover {
-  background-color: #249f47;
-  user-select: none;
-}
-
-.carousel-content {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.carousel-content .rating-count li {
-  text-decoration: none;
-  list-style-type: none;
-  display: inline;
-}
-
-.carousel-controls {
-  cursor: pointer;
-  margin: 1.5rem 0;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.carousel-controls .prev-icon,
-.carousel-controls .next-icon {
-  padding: 1rem;
-  border-radius: 50%;
-  transition: background-color 0.2s ease-in-out;
-  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
-}
-
-.carousel-controls .prev-icon:hover,
-.carousel-controls .next-icon:hover {
-  background-color: #d2f34c;
-}
-
-.logo {
-  width: 100%;
-  max-width: 220px;
-  margin-bottom: 1rem;
-}
-
-.testimonial-quote {
-  color: #fff;
-  opacity: 0.85;
-  text-align: left;
-  font-family: "Gordita-Regular", cursive;
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-  width: 95%;
-}
-
-.rating-divider {
-  width: 100%;
-  margin: 1rem auto 1.5rem;
-  border: 1px solid #fff;
-}
-
-.rating {
-  display: flex;
-  gap: 0.5rem;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-}
-
-.testifier-name {
-  font-family: "Gordita-Regular", cursive;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: 400;
-  text-align: left;
-}
-
-.testifier-name span {
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-
-.testimonials .header {
-  font-family: "EB Garamond", serif;
-  font-size: 2.5rem;
-  font-weight: 500;
-  color: #254035;
-  text-align: center;
-  max-width: 100%;
-}
-
-.talents p {
-  font-size: 14px;
-  font-weight: 300;
-  color: #0000004d;
-  font-family: "Gordita-Regular", cursive;
-  letter-spacing: 1px;
-  margin: 0px 0px 15px;
-  text-transform: uppercase;
-}
-
-.talents .header {
-  font-family: "EB Garamond", serif;
-  font-size: 2.4rem;
-  font-weight: 500;
-  max-width: 100%;
-}
-
-.talents .talent-btn {
-  text-transform: capitalize;
-  background: transparent;
-  border: 1px solid #00be57;
-  color: #00be57;
-  border-radius: 8px;
-  padding: 10px 20px;
-  font-size: 1.1rem;
-  font-weight: 500;
-  transition: color 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.talents .talent-btn:hover {
-  color: #fff;
-  background-color: #244034;
-}
-
-.accordion {
-  margin: 1.5rem 0 2rem;
-  font-family: "Gordita-Regular", cursive;
-}
-
-.accordion .accordion-button {
-  background: transparent;
-  color: #000;
-  font-weight: 600;
-  border: none;
-  box-shadow: none;
-}
-
-.accordion .accordion-item {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 0.5rem;
-  overflow: hidden;
-  padding: 0;
-}
-
-.accordion-item .accordion-header .accordion-button {
-  font-size: 1.1rem;
-  font-weight: 600;
-}
-
-.accordion-item .accordion-collapse .accordion-body {
-  font-size: 0.9rem;
-  font-weight: 500;
-}
-
-.QandA-wrapper {
-  margin: 5rem 0 6rem;
-}
-
-.QandA-wrapper .header {
-  font-size: 2.5rem;
-  font-family: "EB Garamond", serif;
-  font-weight: 500;
-  text-align: center;
-  padding: 1rem;
-}
-
-.customer-support {
-  background-color: #fff;
-  border: 2px solid #00be57;
-  border-radius: 35px;
-  display: inline-block;
-  font-family: "Gordita-Regular", cursive;
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 14px;
-  padding: 5px 25px;
-  text-align: center;
-  max-width: 100%;
-}
-
-.customer-support div {
-  font-size: 1rem;
-  font-weight: 600;
-  display: inline;
-  line-height: 24px;
-}
-
-.customer-support div span {
-  font-size: 1rem;
-  font-weight: 600;
-  color: #00be57;
-}
-
-.customer-support a {
-  border: none;
-  outline: none;
-  text-decoration: underline;
-  font-size: 1rem;
-  font-weight: 400;
-  background: transparent;
-  color: #00be57;
-}
-
-.userSetup-wrapper {
-  padding: 1.5rem 0 1.5rem;
-  text-align: center;
-}
-
-.userSetup-wrapper h1 {
-  font-family: "EB Garamond", serif;
-  font-size: 2.3rem;
-  font-weight: 500;
-  max-width: 100%;
-  padding: 2px;
-}
-
-.userSetup-wrapper p {
-  font-size: 1rem;
-  font-weight: 400;
-  margin: 0.5rem 0 0;
-  color: #333;
-  padding: 5px;
-}
-
-.userSetup-btns {
-  margin: 1rem 0 3rem;
-}
-
-.userSetup-btns .btn1 {
-  text-transform: capitalize;
-  background: transparent;
-  border: 1px solid #00be57;
-  color: #00be57;
-  border-radius: 10px;
-  padding: 10px 15px;
-  transition: background-color 0.2s ease;
-  transition: color 0.2s ease;
-}
-
-.userSetup-btns .btn1:hover {
-  color: #fff;
-  background-color: #244034;
-}
-
-.userSetup-btns .btn2 {
-  background-color: #00be57;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  font-size: 12px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-  transition: color 0.2s ease;
-  text-transform: uppercase;
-}
-
-.userSetup-btns .btn2:hover {
-  color: #fff;
-  background-color: #244034;
-}
-
-.footer-wrapper {
-  margin: 0 0 1rem;
-}
-
-.footer {
-  margin: 0 0 3rem;
-  padding: 0 0.8rem;
-}
-
-.footer-header h1 {
-  color: #24483a;
-  font-size: 2rem;
-  font-family: "EB Garamond", serif;
-}
-
-.footer-header a {
-  color: #00be57;
-  margin: 1rem 0 1rem;
-}
-
-.footer-category h1 {
-  font-size: 1.1rem;
-  font-weight: 800;
-  font-family: "Gordita-Regular", cursive;
-  margin: 0 0 1rem;
-  color: #000;
-}
-
-.footer-category-links p a {
-  font-size: 1rem;
-  font-weight: lighter;
-  font-family: "Gordita-Regular", cursive;
-  margin: 1rem 0 0;
-  text-decoration: none;
-  color: #000000b3;
-  transition: color ease-in-out 0.3s;
-}
-
-.footer-category-links p a:first-child {
-  margin-top: 0;
-}
-
-.footer-category-links p a:hover {
-  color: #00be57;
-}
-
-.socials-wrapper i {
-  color: #000000b3;
-  width: 35px;
-  cursor: pointer;
-  transition: color ease-in-out 0.3s;
-}
-
-.socials-wrapper i:hover {
-  color: #00be57;
-}
-
-.other-links-wrapper {
-  font-weight: 600;
-  font-family: "Gordita-Regular", cursive;
-  color: #000;
-  font-size: 1rem;
-}
-
-.other-links-wrapper p {
-  cursor: pointer;
-}
-
-.copyright {
-  color: #000000b3;
-  font-family: "Gordita-Regular", cursive;
-  font-weight: 500;
-  font-size: 0.9rem;
-}
-
-.top-btn {
+.scroll-to-top-btn {
   appearance: button;
   border: none;
   outline: none;
@@ -776,125 +20,28 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.top-btn i {
+.scroll-to-top-btn i {
   cursor: pointer;
   display: inline;
   color: #fff;
   font-size: 1rem;
 }
 
-.custom-gap {
-  --bs-gutter-x: 3rem;
-  --bs-gutter-y: 3rem;
-}
 
-/* Custom hamburger menu */
-.hamburger {
-  display: block;
-  cursor: pointer;
-  padding: 0.3rem 0.5rem;
-  border-radius: 5px;
-  background-color: #00be57;
-}
-
-.hamburger span {
-  display: block;
-  width: 27px;
-  height: 2px;
-  margin: 6px 0;
-  transition: 0.4s;
-  background: transparent; /* Inherits light green */
-  border: 1px solid white; /* White lines instead of background */
-}
-
-/* Default state (normal hamburger) */
-.hamburger.open span:nth-child(1) {
-  transform: translateY(10px) rotate(45deg);
-}
-
-.hamburger.open span:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger.open span:nth-child(3) {
-  transform: translateY(-10px) rotate(-45deg);
-}
-
-.container-fluid .navbar-brand {
-  font-family: "EB Garamond", serif;
-  font-size: 1.5rem;
-  color: #24483a;
+/* CSS utility class (for basic reusability) */
+/* .btn {
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.375rem;
   font-weight: 600;
-}
-
-.container-fluid .smlogin-link {
-  text-decoration: none;
-  font-weight: 600;
-  color: #212529;
-}
-
-.navmenu .header h2 {
-  color: #24483a;
-  font-size: 2rem;
-  font-family: "EB Garamond", serif;
-}
-
-.navbar-nav .nav-item a {
-  font-size: 1rem;
-  font-weight: 600;
-  color: #000;
-  margin: 1rem 0 0;
-  font-family: "Gordita-Regular", cursive;
-  transition: color ease-in 0.2s;
-}
-
-.navbar-nav .nav-item a:hover {
-  color: #00be57;
-}
-
-.navbar-nav .nav-item .signupbtn {
-  color: #fff;
-  background-color: #00be57;
-  font-family: "Gordita-Regular", cursive;
-  width: 100%;
-  padding: 10px;
   border: none;
-  outline: none;
-  border-radius: 30px;
-  transition: color ease 0.2s;
-  transition: background-color ease-in-out 0.2s;
+  cursor: pointer;
 }
-
-.navbar-nav .nav-item .signupbtn:hover {
-  color: #fff;
-  background-color: #244034;
+.btn-primary {
+  background-color: #007bff;
+  color: white;
 }
+.btn-secondary {
+  background-color: #6c757d;
+  color: white;
+} */
 
-/* Custom responsive menu */
-@media (max-width: 992px) {
-  .navbar-collapse {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    background: white;
-    padding: 15px;
-    transition: all 0.3s ease-in-out;
-    transform: translateY(-100%);
-  }
-
-  .navmenu {
-    transition: transform 0.3s ease-in-out;
-    transform: translateX(-100%);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 80vw;
-    min-height: 100vh;
-    background: white;
-    z-index: 500;
-  }
-  .navmenu.show {
-    transform: translateX(0);
-  }
-}
