--- a/src/app/components/sections/category-list/category-list.component.css
+++ b/src/app/components/sections/category-list/category-list.component.css
@@ -5,6 +5,18 @@
   font-weight: 600;
 }
 
+.category-card-wrapper {
+  flex: 1 1 200px;
+  max-width: 220px;
+  display: flex;
+  justify-content: center;
+  margin: 1.5rem 0 0;
+}
+
+.category-card-wrapper:first-child {
+  margin: 2.5rem 0 0;
+}
+
 .category-card {
   position: relative;
   background-color: #fff;
@@ -13,6 +25,7 @@
   cursor: pointer;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 3.5rem 0;
+  width: 100%;
   max-width: 200px;
   margin: auto;
 }
@@ -71,4 +84,15 @@
 .custom-gap {
   --bs-gutter-x: 3rem;
   --bs-gutter-y: 3rem;
+}
+
+
+@media (min-width: 768px) {
+  .category-card {
+    padding: 2.5rem 0;
+  }
+
+  .category-card .title {
+    font-size: 20px;
+  }
 }
