--- a/src/app/components/sections/findtalents/findtalents.component.css
+++ b/src/app/components/sections/findtalents/findtalents.component.css
@@ -4,7 +4,7 @@
   color: #0000004d;
   font-family: "Gordita-Regular", cursive;
   letter-spacing: 1px;
-  margin: 0px 0px 15px;
+  margin: 0 0 1rem;
   text-transform: uppercase;
 }
 
@@ -61,4 +61,21 @@
 .accordion-item .accordion-collapse .accordion-body {
   font-size: 0.9rem;
   font-weight: 500;
+}
+
+
+@media (min-width: 576px){
+  .talents{
+    margin: 0 1rem 0;
+  }
+
+  .talents p {
+    margin: 0 0 1rem 1rem;
+    font-size: .9rem;
+}
+
+.talents .header {
+    margin: 0 0 0 1rem;
+    font-size: 2.3rem;
+}
 }
