--- a/src/app/components/sections/testimonials/testimonials.component.css
+++ b/src/app/components/sections/testimonials/testimonials.component.css
@@ -110,3 +110,10 @@
   text-align: center;
   max-width: 100%;
 }
+
+
+@media only screen and (min-width: 576px){
+  .testimonials{
+    margin: 5rem 2rem 6rem;
+  }
+}
