--- a/src/app/components/sections/job-card/job-card.component.html
+++ b/src/app/components/sections/job-card/job-card.component.html
@@ -1,22 +1,34 @@
 <div class="new-jobs">
-  <h1 class="header">New Job Listing</h1>
+  <div class="d-lg-flex align-items-lg-center justify-content-lg-between">
+    <h1 class="header">New Job Listing</h1>
+    <div class="explore-all mb-4 d-none d-lg-block d-sm-none d-md-none">
+      <a class="btn" href="">Explore all jobs ></a>
+    </div>
+  </div>
 
   <div class="view-jobs-wrapper">
-    <div *ngFor="let job of jobs" class="job-card d-flex flex-column flex-md-row justify-content-between align-items-center align-items-md-center">
+    <div
+      *ngFor="let job of jobs"
+      class="job-card d-flex flex-column flex-md-row justify-content-between align-items-center align-items-md-center"
+    >
       <!-- LEFT: Logo + Info -->
       <div class="d-flex gap-3 w-100 align-items-start">
         <img [src]="job.logo" alt="Company logo" class="job-logo" />
 
-        <div class="job-info d-flex flex-column gap-1 flex-grow-1 flex-lg-row">
+        <div class="job-info d-flex flex-column flex-grow-1">
           <h2 class="job-title">{{ job.title }}</h2>
-
-          <div class="job-content d-flex flex-wrap gap-3 gap-md-5 align-items-md-center flex-lg-nowrap">
+          <div class="job-content d-flex flex-column flex-md-row">
             <div>
-              <p class="job-type" [style.color]="job.type === 'Fulltime' ? '#00be57' : 'red'">
+              <p
+                class="job-type"
+                [style.color]="job.type === 'Fulltime' ? '#00be57' : 'red'"
+              >
                 {{ job.type }}
               </p>
               <p class="job-meta">
-                <span style="color: #646765; font-weight: 400">{{ job.date }} by</span>
+                <span style="color: #646765; font-weight: 400"
+                  >{{ job.date }} by</span
+                >
                 {{ job.company }}
               </p>
             </div>
@@ -58,4 +70,3 @@
     <a href="">Click Here</a>
   </div>
 </div>
-
